--- a/aplication/front-end/src/App.css
+++ b/aplication/front-end/src/App.css
@@ -1,7 +1,17 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400&display=swap');
 
 * {
   margin: 0;
   padding: 0;
 }
 
+body {
+  font-family: 'Montserrat', sans-serif;
+}
+
+h1,h3, h4 {
+  color: #fff;
+  font-family: 'Montserrat', sans-serif;
+  text-transform: uppercase;
+  font-weight: 200;
+}
