--- a/aplication/front-end/src/pages/Users/users.css
+++ b/aplication/front-end/src/pages/Users/users.css
@@ -1,7 +1,5 @@
 #table {
-  /* border: 1px solid #000; */
   text-align: center;
-  height: 100vh;
   margin: 0 auto;
 }
 
@@ -11,11 +9,7 @@
   padding-top: 3rem;
 }
 
-.table-container {
-
-}
-
-table {
+.table {
   margin: 5rem auto 0;
 }
 
@@ -36,5 +30,12 @@ th:last-child, td:last-child {
 
 .td-bottom {
   border-bottom: none;
+}
+
+.topo-home {
+  position: absolute;
+  bottom: 210px;
+  right: 50px;
+  width: 50px;
 }
 
