--- a/aplication/front-end/src/pages/Users/users.css
+++ b/aplication/front-end/src/pages/Users/users.css
@@ -13,6 +13,19 @@
   margin: 5rem auto 0;
 }
 
+.table thead th {
+  border-bottom: 1px solid #29abe2;
+}
+
+.table th {
+  border-top: none;
+  text-transform: uppercase;
+}
+
+.table td {
+  border-top: #29abe2;
+}
+
 th, td {
   padding: 10px 30px;
   text-align: center;
@@ -20,9 +33,6 @@ th, td {
   border-bottom: 1px solid #29abe2;
 }
 
-th {
-  text-transform: uppercase;
-}
 
 th:last-child, td:last-child {
   border-right: none;
